--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/03_Practica_Obligatoria/18_Practica_Obligatoria_Colecciones_Funciones.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/03_Practica_Obligatoria/18_Practica_Obligatoria_Colecciones_Funciones.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,6 +67,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultado=[elemento*elemento for elemento in ejer_2]\n",
+    "resultado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def funcion_elevar_cuadrado(elemento):\n",
+    "    return elemento*elemento\n",
+    "print(list(map(funcion_elevar_cuadrado,ejer_2)))\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -81,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +135,7 @@
    ],
    "source": [
     "ejer_3 = [\"Un\", \"árbol\", \"binario\", \"es\", \"una\", \"estructura\", \"de\", \"un\", \"tipo\", \"particular\", \"a\", \"veces\", \"no\", \"es\", \"ni\", \"binario\"]\n",
-    "def encontras_duplicados(*arg):\n",
+    "def encontrar_duplicados(*arg):\n",
     "    resultado = {}\n",
     "    for elemento in arg:\n",
     "        x = elemento\n",
@@ -103,7 +144,38 @@
     "            if elemento == element:\n",
     "                resultado[elemento] = resultado[elemento]+1\n",
     "    print(resultado)\n",
-    "encontras_duplicados(\"Un\",\"es\",\"binario\")"
+    "encontrar_duplicados(\"Un\",\"es\",\"binario\")\n",
+    "# esta funcion cuenta las repeticiones \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'un': [0, 7], 'es': [3, 13], 'binario': [2, 15]}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ejer_3 = [\"Un\", \"árbol\", \"binario\", \"es\", \"una\", \"estructura\", \"de\", \"un\", \"tipo\", \"particular\", \"a\", \"veces\", \"no\", \"es\", \"ni\", \"binario\"]\n",
+    "def duplicados(*args, lst_frase):\n",
+    "    resultados = {}\n",
+    "    for dup in args: # recorremos la lista que conforma la frase\n",
+    "        # Por cada elemento de la frase lo comparamos con los elementos que queremos saber si se repiten\n",
+    "        duplicados = [i for i,n in enumerate(lst_frase) if dup.lower() == n.lower()] \n",
+    "        resultados[dup] = duplicados  # Guardamos la palabra que secomo key y los indices como value del diccionario\n",
+    "    return resultados\n",
+    "results = duplicados(\"un\", \"es\", \"binario\", lst_frase=ejer_3)\n",
+    "results\n",
+    "# esta funcion da los indices para las repeticiones\n"
    ]
   },
   {
@@ -119,7 +191,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El número 3 aparece 7 veces.\n",
+      "Nueva tupla (índices 4 a 9): (19, 3, 29, 45, 67, 78)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_9 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7)\n",
+    "def analizar_tupla(ejer_9):\n",
+    "    # 1️⃣ Contar cuántas veces aparece el número 3\n",
+    "    n = 0\n",
+    "    for elemento9 in ejer_9:\n",
+    "        if elemento9 == 3:\n",
+    "            n += 1\n",
+    "print(f\"El número 3 aparece {n} veces.\")\n",
+    "# 2️⃣ Crear una nueva tupla con los elementos de índice 4 al 9 (sin incluir el 10)\n",
+    "lista2 = []\n",
+    "for i, elemento6 in enumerate(ejer_9):\n",
+    "    if 4 <= i < 10:\n",
+    "        lista2.append(elemento6)\n",
+    "\n",
+    "tupla2 = tuple(lista2)\n",
+    "print(\"Nueva tupla (índices 4 a 9):\", tupla2)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -127,24 +234,24 @@
      "output_type": "stream",
      "text": [
       "7\n",
-      "(29, 45, 67, 78, 90, 5, 2, 4, 7, 9, 4, 2, 4, 4, 6, 7)\n"
+      "(3, 29, 45, 67, 78)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "ejer_9 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7)\n",
-    "n=0\n",
-    "for elemento9 in ejer_9:\n",
-    "    if elemento9 == 3:\n",
-    "        n=n+1\n",
-    "print(n)\n",
-    "lista2=[]\n",
-    "for elemento6 in ejer_9:\n",
-    "    m=ejer_9.index(elemento6)\n",
-    "    if m > 4:\n",
-    "        lista2.append(elemento6)\n",
-    "tupla2 = tuple(lista2)\n",
-    "print(tupla2)"
+    "print(ejer_9.count(3))\n",
+    "print(ejer_9[5:10])\n",
+    "len(ejer_9)"
    ]
   },
   {
@@ -183,6 +290,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def buscado (numero, iterable):\n",
+    "    for i in iterable:\n",
+    "        if i == numero:\n",
+    "            return True\n",
+    "    return False\n",
+    "buscado (60, ejer_9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No se encuentra en la tupla\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 60 in ejer_9:\n",
+    "    print(\"Sì se encuntra en la tupla\")\n",
+    "else:\n",
+    "    print(\"No se encuentra en la tupla\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -194,32 +346,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[29, 45, 67, 78, 90, 5, 2, 4, 7, 9, 4, 2, 4, 4, 6, 7]\n",
-      "[29, 45, 67, 78, 90, 5, 2, 4, 7, 9, 4, 2, 4, 4, 6, 7]\n",
-      "{1: 29, 2: 45, 3: 67, 4: 78, 5: 90, 6: 5, 7: 2, 8: 4, 9: 7, 10: 9, 11: 4, 12: 2, 13: 4, 14: 4, 15: 6, 16: 7}\n"
+      "[3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7]\n",
+      "[3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7]\n",
+      "{0: 3, 1: 20, 2: 3, 3: 47, 4: 19, 5: 3, 6: 29, 7: 45, 8: 67, 9: 78, 10: 90, 11: 3, 12: 3, 13: 5, 14: 2, 15: 4, 16: 7, 17: 9, 18: 4, 19: 2, 20: 4, 21: 3, 22: 3, 23: 4, 24: 6, 25: 7}\n"
      ]
     }
    ],
    "source": [
-    "lista5= list(tupla2)\n",
+    "ejer_9 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7)\n",
+    "lista5= list(ejer_9)\n",
     "print(lista5)\n",
     "\n",
-    "set5= set(tupla2)\n",
+    "set5= set(ejer_9)\n",
     "print(lista5)\n",
     "\n",
     "dicc5={}\n",
-    "n=1\n",
-    "for elemento5 in tupla2:\n",
+    "n=0\n",
+    "for elemento5 in ejer_9:\n",
     "    dicc5[n] = elemento5\n",
     "    n=n+1\n",
     "print(dicc5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 3,\n",
+       " 1: 20,\n",
+       " 2: 3,\n",
+       " 3: 47,\n",
+       " 4: 19,\n",
+       " 5: 3,\n",
+       " 6: 29,\n",
+       " 7: 45,\n",
+       " 8: 67,\n",
+       " 9: 78,\n",
+       " 10: 90,\n",
+       " 11: 3,\n",
+       " 12: 3,\n",
+       " 13: 5,\n",
+       " 14: 2,\n",
+       " 15: 4,\n",
+       " 16: 7,\n",
+       " 17: 9,\n",
+       " 18: 4,\n",
+       " 19: 2,\n",
+       " 20: 4,\n",
+       " 21: 3,\n",
+       " 22: 3,\n",
+       " 23: 4,\n",
+       " 24: 6,\n",
+       " 25: 7}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "dict((enumerate(ejer_9)))"
    ]
   },
   {
@@ -233,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -253,6 +452,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19326120\n"
+     ]
+    }
+   ],
+   "source": [
+    "multiplicación = 1\n",
+    "for elemento in ejer_6.values():\n",
+    "    multiplicación = multiplicación * elemento\n",
+    "print(multiplicación)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -265,25 +484,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'título': 'b', 'autor': 'a', 'idioma original': 'f', 'año de publicacion': 'g'}, {'título': 'b', 'autor': 'a', 'idioma original': 'f', 'año de publicacion': 'g'}, {'título': 'b', 'autor': 'a', 'idioma original': 'f', 'año de publicacion': 'g'}, {'título': 'b', 'autor': 'a', 'idioma original': 'f', 'año de publicacion': 'g'}]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'título': 'b',\n",
+       "  'autor': 'a',\n",
+       "  'idioma original': 'f',\n",
+       "  'año de publicacion': 'g'},\n",
+       " {'título': 'b',\n",
+       "  'autor': 'a',\n",
+       "  'idioma original': 'f',\n",
+       "  'año de publicacion': 'g'},\n",
+       " {'título': 'b',\n",
+       "  'autor': 'a',\n",
+       "  'idioma original': 'f',\n",
+       "  'año de publicacion': 'g'},\n",
+       " {'título': 'b',\n",
+       "  'autor': 'a',\n",
+       "  'idioma original': 'f',\n",
+       "  'año de publicacion': 'g'}]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "libro1 = {\"título\":\"b\",\"autor\":\"a\",\"idioma original\":\"f\",\"año de publicacion\":\"g\"}\n",
-    "libro2 = {\"título\":\"b\",\"autor\":\"a\",\"idioma original\":\"f\",\"año de publicacion\":\"g\"}\n",
-    "libro3 = {\"título\":\"b\",\"autor\":\"a\",\"idioma original\":\"f\",\"año de publicacion\":\"g\"}\n",
-    "libro4 = {\"título\":\"b\",\"autor\":\"a\",\"idioma original\":\"f\",\"año de publicacion\":\"g\"}\n",
+    "libro1 = {\"título\":\"b\",\n",
+    "          \"autor\":\"a\",\n",
+    "          \"idioma original\":\"f\",\n",
+    "          \"año de publicacion\":\"g\"\n",
+    "          }\n",
+    "libro2 = {\"título\":\"b\",\n",
+    "          \"autor\":\"a\",\n",
+    "          \"idioma original\":\"f\",\n",
+    "          \"año de publicacion\":\"g\"\n",
+    "          }\n",
+    "libro3 = {\"título\":\"b\",\n",
+    "          \"autor\":\"a\",\n",
+    "          \"idioma original\":\"f\",\n",
+    "          \"año de publicacion\":\"g\"\n",
+    "          }\n",
+    "libro4 = {\"título\":\"b\",\n",
+    "          \"autor\":\"a\",\n",
+    "          \"idioma original\":\"f\",\n",
+    "          \"año de publicacion\":\"g\"\n",
+    "          }\n",
     "\n",
     "librería = [libro1,libro2,libro3,libro4]\n",
-    "print(librería)"
+    "librería"
    ]
   },
   {
@@ -313,6 +566,43 @@
     "libro3[\"idioma original\"]= \"esperanto\"\n",
     "libro4[\"idioma original\"]= \"esperanto\"\n",
     "print(libro1,libro2,libro3,libro4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'título': 'b',\n",
+       "  'autor': 'a',\n",
+       "  'idioma original': 'esperanto',\n",
+       "  'año de publicacion': 'g'},\n",
+       " {'título': 'b',\n",
+       "  'autor': 'a',\n",
+       "  'idioma original': 'esperanto',\n",
+       "  'año de publicacion': 'g'},\n",
+       " {'título': 'b',\n",
+       "  'autor': 'a',\n",
+       "  'idioma original': 'esperanto',\n",
+       "  'año de publicacion': 'g'},\n",
+       " {'título': 'b',\n",
+       "  'autor': 'a',\n",
+       "  'idioma original': 'esperanto',\n",
+       "  'año de publicacion': 'g'}]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for libro in librería:\n",
+    "    libro[\"idioma original\"] = \"esperanto\"\n",
+    "librería"
    ]
   },
   {
@@ -487,14 +777,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dni incorrecto\n"
+      "Dni correcto\n"
      ]
     }
    ],
