--- a/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/02_Ejercicios_Workout/07_Ejercicios_Programacion_Orientada_Objetos.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/02_Ejercicios_Workout/07_Ejercicios_Programacion_Orientada_Objetos.ipynb
@@ -63,10 +63,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class perro:\n",
+    "    patas = 4\n",
+    "    orejas = 2\n",
+    "    ojos = 2\n",
+    "\n",
+    "    def __init__(self, raza, color_pelo = \"marron\", dueño = False, velocidad = 0):\n",
+    "        self.raza = raza\n",
+    "        self.color_pelo = color_pelo\n",
+    "        self.dueño = dueño\n",
+    "        self.velocidad = velocidad\n",
+    "\n",
+    "    def andar(self, aumento_velocidad):\n",
+    "        self.velocidad = self.velocidad + aumento_velocidad\n",
+    "        return self.velocidad\n",
+    "    \n",
+    "    def parar(self):\n",
+    "        self.velocidad = 0\n",
+    "        return self.velocidad\n",
+    "    \n",
+    "    def ladrar(self, orden):\n",
+    "        return print(\"guau\"+orden)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pastor aleman marron False 0\n",
+      "10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nLa clase perro tiene por defecto el numero de piernas\\nel numero de orejas y el numero de ojos, asi como el \\ncolor de pelo, que no tiene dueño y que estan parado,\\nla clase permite asignarle raza al objeto, asi como el\\nresto de atributos antes mencionados, tambien permite aumentarle \\nla velocidad tanto como se quiera asi como volver a pararle, la\\nultima funcionalidad es que puede ladrar, respondiendo a la orden \\nque se le de guau + la orden en concreto\\n\\n'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pastor_aleman = perro(\"pastor aleman\")\n",
+    "print(pastor_aleman.raza,pastor_aleman.color_pelo,pastor_aleman.dueño,pastor_aleman.velocidad)\n",
+    "pastor_aleman.andar(10)\n",
+    "print(pastor_aleman.velocidad)\n",
+    "pastor_aleman.parar()\n",
+    "\n",
+    "'''\n",
+    "La clase perro tiene por defecto el numero de piernas\n",
+    "el numero de orejas y el numero de ojos, asi como el \n",
+    "color de pelo, que no tiene dueño y que estan parado,\n",
+    "la clase permite asignarle raza al objeto, asi como el\n",
+    "resto de atributos antes mencionados, tambien permite aumentarle \n",
+    "la velocidad tanto como se quiera asi como volver a pararle, la\n",
+    "ultima funcionalidad es que puede ladrar, respondiendo a la orden \n",
+    "que se le de guau + la orden en concreto\n",
+    "\n",
+    "'''"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,15 +173,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class tienda:\n",
+    "    tipo = \"electrodomesticos\"\n",
+    "    abierta = True\n",
+    "    def __init__(self, nombre, direccion, empleados , ventas_3meses):\n",
+    "        self.nombre = nombre\n",
+    "        self.direccion = direccion\n",
+    "        self.empleados = empleados\n",
+    "        self.ventas_3meses = ventas_3meses\n",
+    "\n",
+    "    def ventas_totales(self, meses_abierto):\n",
+    "        dinero = 0\n",
+    "        for element in self.ventas_3meses:\n",
+    "            dinero = dinero + int(element)\n",
+    "        ventas = (dinero/3)*meses_abierto\n",
+    "        return ventas\n",
+    "    \n",
+    "    def promedio_ventas(self, meses_abierto):\n",
+    "        dinero = 0\n",
+    "        for element in self.ventas_3meses:\n",
+    "            dinero = dinero + int(element)\n",
+    "        ventas = ((dinero/3)*meses_abierto)/self.empleados\n",
+    "        return ventas\n",
+    "    \n",
+    "    def nombre_dirección(self):\n",
+    "        return print(self.nombre, self.direccion)\n",
+    "    \n",
+    "    def ventas_ultimo_mes(self):\n",
+    "        return self.ventas_3meses[-1]\n",
+    "    \n",
+    "    def ventas_por_marketing(self,dinero_invertido):\n",
+    "        dinero = 0\n",
+    "        for element in self.ventas_3meses:\n",
+    "            dinero = dinero + int(element)\n",
+    "        if dinero_invertido < 1000:\n",
+    "            proyec_ventas = dinero*1.2\n",
+    "        else:\n",
+    "            proyec_ventas = dinero*1.5\n",
+    "        return proyec_ventas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nike callenueva 10000 [1000, 2000, 1000]\n",
+      "13333.333333333332\n",
+      "1.3333333333333333\n",
+      "nike callenueva\n",
+      "None\n",
+      "1000\n",
+      "6000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "berska = tienda(\"berska\",\"avenida123\",500,[150,200,100])\n",
+    "zara = tienda(\"zara\",\"avenida554\",1000,[300,300,300])\n",
+    "nike = tienda(\"nike\",\"callenueva\",10000,[1000,2000,1000])\n",
+    "print(nike.nombre, nike.direccion, nike.empleados,nike.ventas_3meses)\n",
+    "print(nike.ventas_totales(10))\n",
+    "print(nike.promedio_ventas(10))\n",
+    "print(nike.nombre_dirección())\n",
+    "print(nike.ventas_ultimo_mes())\n",
+    "print(nike.ventas_por_marketing(2000))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -129,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
