--- a/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/01_Workout/Constructores.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/01_Workout/Constructores.ipynb
@@ -52,10 +52,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Coche:\n",
+    "    puertas = 4\n",
+    "    ruedas = 4\n",
+    "\n",
+    "    def __init__(self,marca_coche):\n",
+    "        self.marca = marca_coche\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tesla\n"
+     ]
+    }
+   ],
+   "source": [
+    "tesla = Coche(\"Tesla\")\n",
+    "print(tesla.marca)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,10 +108,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mercedes\n",
+      "Renault\n",
+      "4\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "mercedes = Coche(\"Mercedes\")\n",
+    "renault = Coche(\"Renault\")\n",
+    "print(mercedes.marca)\n",
+    "print(renault.marca)\n",
+    "print(renault.puertas)\n",
+    "print(mercedes.puertas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,22 +140,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Coche:\n",
+    "    puertas = 4\n",
+    "    ruedas = 4\n",
+    "    def __init__(self,marca_coche,num_puertas):\n",
+    "        self.marca = marca_coche\n",
+    "        self.puertas = num_puertas"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "tesla = Coche(\"Tesla\",6)\n",
+    "mercedes_500 = Coche(\"Mercedes\",8)\n",
+    "print(tesla.puertas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Coche:\n",
+    "    def __init__(self,marca_coche,num_puertas = 4, num_ruedas = 4):\n",
+    "        self.marca = marca_coche\n",
+    "        self.puertas = num_puertas\n",
+    "        self.puertas = num_ruedas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "tesla_4 = Coche(\"Tesla\")\n",
+    "tesla_6r = Coche(\"Tesla\",num_ruedas = 6)\n",
+    "print(tesla_4.puertas,tesla_6r.puertas)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -125,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
