--- a/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/03_Practica_Obligatoria/18_Practica_Obligatoria_OOP.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/03_Practica_Obligatoria/18_Practica_Obligatoria_OOP.ipynb
@@ -82,10 +82,131 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class user:\n",
+    "    def __init__(self, nombre, saldo_inicial, checking_acount):\n",
+    "        self.nombre = nombre\n",
+    "        if not isinstance(saldo_inicial, int):\n",
+    "            raise TypeError(\"La edad debe ser un número entero.\")\n",
+    "        if saldo_inicial < 0:\n",
+    "            raise ValueError(\"La edad no puede ser negativa.\")\n",
+    "        else:\n",
+    "            self.saldo_inicial= saldo_inicial\n",
+    "        if not isinstance(checking_acount, bool):\n",
+    "            raise TypeError(\"La edad debe ser un número entero.\")\n",
+    "        else:\n",
+    "            self.checking_acount = checking_acount\n",
+    "        \n",
+    "    def retirar_saldo(self,dinero_retirada):\n",
+    "        if self.checking_acount:\n",
+    "            if int(dinero_retirada) < self.saldo_inicial:\n",
+    "                print(self.nombre,int(dinero_retirada))\n",
+    "                self.saldo_inicial = self.saldo_inicial - int(dinero_retirada)\n",
+    "            else:\n",
+    "                print(\"Value error\")\n",
+    "        else:\n",
+    "            print(\"No tiene autorizado sacar dinero\")\n",
+    "        return self.saldo_inicial\n",
+    "    \n",
+    "    def ingresar_dinero(self,dinero_ingreso):\n",
+    "        if int(dinero_ingreso) > 0:\n",
+    "            self.saldo_inicial = self.saldo_inicial + int(dinero_ingreso)\n",
+    "        return self.saldo_inicial \n",
+    "    \n",
+    "    def transferencia(self,usuario,dinero_transferencia):\n",
+    "        if usuario.checking_acount == False:\n",
+    "            print(\"ValueError\")\n",
+    "        else:\n",
+    "            if self.saldo_inicial < int(dinero_transferencia):\n",
+    "                print(\"ValueError\")\n",
+    "            else:\n",
+    "                self.saldo_inicial = self.saldo_inicial - int(dinero_transferencia)\n",
+    "                usuario.saldo_inicial = usuario.saldo_inicial + int(dinero_transferencia)\n",
+    "        return usuario.nombre, usuario.saldo_inicial, self.nombre, self.saldo_inicial"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "**PISTA**: Para \"lanzar\" un error necesitarás emplear el comando ```raise```, [aquí](https://www.w3schools.com/python/gloss_python_raise.asp) tienes una ayudita, aunque puedes buscar más por tu cuenta.tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jeff 20\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Jeff = user('Jeff', 70, True)\n",
+    "Joe = user('Joe', 70, True)\n",
+    "Jeff.retirar_saldo(20)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Jeff = user('Jeff', 70, True)\n",
+    "Joe = user('Joe', 70, True)\n",
+    "Jeff.ingresar_dinero(30)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Jeff', 100, 'Joe', 40)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Jeff = user('Jeff', 70, True)\n",
+    "Joe = user('Joe', 70, True)\n",
+    "Joe.transferencia(Jeff,30)"
    ]
   },
   {
@@ -122,7 +243,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -136,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
