--- a/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/03_Practica_Obligatoria/18_Practica_Obligatoria_OOP.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/03_Practica_Obligatoria/18_Practica_Obligatoria_OOP.ipynb
@@ -88,44 +88,50 @@
    "outputs": [],
    "source": [
     "class user:\n",
-    "    def __init__(self, nombre, saldo_inicial, checking_acount):\n",
+    "    def __init__(self, nombre : str, saldo_inicial : int, checking_acount : bool):\n",
     "        self.nombre = nombre\n",
-    "        if not isinstance(saldo_inicial, int):\n",
-    "            raise TypeError(\"La edad debe ser un número entero.\")\n",
+    "        if not isinstance(saldo_inicial, (int, float)):\n",
+    "            raise TypeError(\"El saldo debe ser un número entero.\")\n",
     "        if saldo_inicial < 0:\n",
-    "            raise ValueError(\"La edad no puede ser negativa.\")\n",
+    "            raise ValueError(\"El saldo no puede ser negativo.\")\n",
     "        else:\n",
-    "            self.saldo_inicial= saldo_inicial\n",
+    "            self.saldo_inicial= int(saldo_inicial)\n",
     "        if not isinstance(checking_acount, bool):\n",
-    "            raise TypeError(\"La edad debe ser un número entero.\")\n",
+    "            raise TypeError(\"el valor debe ser un booleano.\")\n",
     "        else:\n",
     "            self.checking_acount = checking_acount\n",
     "        \n",
     "    def retirar_saldo(self,dinero_retirada):\n",
+    "        if not isinstance(dinero_retirada, (int, float)):\n",
+    "            raise TypeError(\"El saldo debe ser un número entero.\")\n",
     "        if self.checking_acount:\n",
-    "            if int(dinero_retirada) < self.saldo_inicial:\n",
-    "                print(self.nombre,int(dinero_retirada))\n",
-    "                self.saldo_inicial = self.saldo_inicial - int(dinero_retirada)\n",
+    "            if (dinero_retirada) < self.saldo_inicial:\n",
+    "                print(self.nombre,(dinero_retirada))\n",
+    "                self.saldo_inicial = self.saldo_inicial - (int(dinero_retirada))\n",
     "            else:\n",
-    "                print(\"Value error\")\n",
+    "                print(\"Value error, no tiene suficiente dinero.\")\n",
     "        else:\n",
-    "            print(\"No tiene autorizado sacar dinero\")\n",
+    "            print(\"No tiene autorizado sacar dinero.\")\n",
     "        return self.saldo_inicial\n",
     "    \n",
     "    def ingresar_dinero(self,dinero_ingreso):\n",
-    "        if int(dinero_ingreso) > 0:\n",
-    "            self.saldo_inicial = self.saldo_inicial + int(dinero_ingreso)\n",
+    "        if not isinstance(dinero_ingreso, (int, float)):\n",
+    "            raise TypeError(\"El saldo debe ser un número entero.\")\n",
+    "        if (dinero_ingreso) > 0:\n",
+    "            self.saldo_inicial = self.saldo_inicial + (int(dinero_ingreso))\n",
     "        return self.saldo_inicial \n",
     "    \n",
     "    def transferencia(self,usuario,dinero_transferencia):\n",
+    "        if not isinstance(dinero_transferencia, (int, float)):\n",
+    "            raise TypeError(\"El saldo debe ser un número entero.\")\n",
     "        if usuario.checking_acount == False:\n",
-    "            print(\"ValueError\")\n",
+    "            print(\"ValueError, habilite transferencias\")\n",
     "        else:\n",
-    "            if self.saldo_inicial < int(dinero_transferencia):\n",
-    "                print(\"ValueError\")\n",
+    "            if self.saldo_inicial < (dinero_transferencia):\n",
+    "                print(\"ValueError, no tiene suficiente dinero\")\n",
     "            else:\n",
-    "                self.saldo_inicial = self.saldo_inicial - int(dinero_transferencia)\n",
-    "                usuario.saldo_inicial = usuario.saldo_inicial + int(dinero_transferencia)\n",
+    "                self.saldo_inicial = self.saldo_inicial - (int(dinero_transferencia))\n",
+    "                usuario.saldo_inicial = usuario.saldo_inicial + (int(dinero_transferencia))\n",
     "        return usuario.nombre, usuario.saldo_inicial, self.nombre, self.saldo_inicial"
    ]
   },
@@ -138,23 +144,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jeff 20\n"
+      "Jeff 30\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "50"
+       "40"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,21 +168,21 @@
    "source": [
     "Jeff = user('Jeff', 70, True)\n",
     "Joe = user('Joe', 70, True)\n",
-    "Jeff.retirar_saldo(20)\n"
+    "Jeff.retirar_saldo(30)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "100"
+       "120"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,21 +190,21 @@
    "source": [
     "Jeff = user('Jeff', 70, True)\n",
     "Joe = user('Joe', 70, True)\n",
-    "Jeff.ingresar_dinero(30)\n"
+    "Jeff.ingresar_dinero(50)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('Jeff', 100, 'Joe', 40)"
+       "('Jeff', 130, 'Joe', 10)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +212,7 @@
    "source": [
     "Jeff = user('Jeff', 70, True)\n",
     "Joe = user('Joe', 70, True)\n",
-    "Joe.transferencia(Jeff,30)"
+    "Joe.transferencia(Jeff,60)"
    ]
   },
   {
@@ -218,26 +224,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jeff 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "68"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Jeff = user('Jeff', 70, True)\n",
+    "Joe = user('Joe', 70, False)\n",
+    "\n",
+    "Jeff.retirar_saldo(2) # Devuelve 'Jeff tiene un saldo de 68.'\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Jeff', 118, 'Joe', 20)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Joe.transferencia(Jeff, 50) # Devuelve 'Joe tiene un saldo de 20 y Jeff tiene un saldo de 118.'\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ValueError, habilite transferencias\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('Joe', 20, 'Jeff', 118)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Jeff.transferencia(Joe, 80) # Lanza un ValueError: Joe no puede recibir transferencias.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Jeff = User('Jeff', 70, True)\n",
-    "Joe = User('Joe', 70, False)\n",
-    "\n",
-    "Jeff.withdraw(2) # Devuelve 'Jeff tiene un saldo de 68.'\n",
-    "\n",
-    "Joe.transfer(Jeff, 50) # Devuelve 'Joe tiene un saldo de 20 y Jeff tiene un saldo de 118.'\n",
-    "\n",
-    "Jeff.transfer(Joe, 80) # Lanza un ValueError: Joe no puede recibir transferencias.\n",
-    "\n",
-    "Joe.checking_account = True # Habilita la cuenta corriente para que Joe pueda recibir transferencias.\n",
-    "\n",
-    "Jeff.transfer(Joe, 80) # Devuelve 'Jeff tiene un saldo de 38 y Joe tiene un saldo de 100.'\n",
-    "\n",
-    "Jeff.transfer(Joe, 100) # Lanza un ValueError: Jeff no tiene suficiente dinero para la transacción.\n",
-    "\n",
-    "Jeff.deposit(20.00) # Devuelve 'Jeff tiene un saldo de 58.'\n"
+    "Joe.checking_acount = True # Habilita la cuenta corriente para que Joe pueda recibir transferencias.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Joe', 100, 'Jeff', 38)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Jeff.transferencia(Joe, 80) # Devuelve 'Jeff tiene un saldo de 38 y Joe tiene un saldo de 100.'\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ValueError, no tiene suficiente dinero\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('Joe', 100, 'Jeff', 38)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Jeff.transferencia(Joe, 100) # Lanza un ValueError: Jeff no tiene suficiente dinero para la transacción.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "58"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Jeff.ingresar_dinero(20.00) # Devuelve 'Jeff tiene un saldo de 58.'"
    ]
   }
  ],
